Move CI to gitlab and require LLVM 8 or newer.
Squashed commit of the following:

commit c7a0902cc0c2de5e1735ea86e87617a1b4d4ccb3
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Sun May 12 20:27:51 2019 -0500

    [ci] speed-up build of xgboost

commit 774443133196857ac647825a1555bbcdf861e47a
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Sun May 12 20:18:53 2019 -0500

    [ci] cleanup ci setup and update readme for master

commit 5279b314c6e920c902e34c9f0b23c2cb737dba1e
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Sun May 12 19:43:19 2019 -0500

    [ci] fix issues with missing c++17 std lib

commit f83aba82ebbc0d1fe4e22ae040574b0f5fffaaf7
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Sun May 12 19:28:48 2019 -0500

    [ci] only check for python package deps

commit 257199fc426343d7c371d5492f1e9edee35c8c5d
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Sun May 12 19:24:02 2019 -0500

    [ci] check for apt pkgs instead of trying to install

commit 2256b3bb1f2e71b7ebbde1f5ec99ebb7a9bb8110
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Sun May 12 19:11:55 2019 -0500

    see what happens

commit 25b3fb52f3d60b108ff1d58aacd9dd0946ec3671
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Fri May 10 20:28:34 2019 -0500

    [ci] simple pipeline please work

commit 7c08849efb27815943cf624b7b56c381647e6656
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Fri May 10 20:21:24 2019 -0500

    [ci] still trying to debug caches

commit 142ad71f4bfe17388d5093fdfa57e11178223c42
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Fri May 10 20:09:38 2019 -0500

    [ci] perhaps we need to sequence cache updates (fixed)

commit 652f60d5a2e981fde13711f1af272f8f37435c6d
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Fri May 10 20:08:24 2019 -0500

    [ci] perhaps we need to sequence cache updates

commit d0c138a91743b14e1913d8863fc0829070556ebe
Author: Kavon Farvardin <kavon@farvard.in>
Date:   Fri May 10 19:52:35 2019 -0500

    [ci] debugging

com

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8)
 
 option(LLVM_ENABLE_PLUGINS "Generate build targets for LLVM plugins." ON)
 option(FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
@@ -18,7 +18,7 @@ if (DEFINED LLVM_ROOT)
   set(LLVM_DIR "${LLVM_ROOT}/lib/cmake/llvm")
 endif()
 
-if (NOT (IS_ABSOLUTE ${LLVM_DIR}))
+if (DEFINED LLVM_ROOT AND NOT (IS_ABSOLUTE ${LLVM_DIR}))
     message(FATAL_ERROR "LLVM_DIR / LLVM_ROOT must be an absolute path. Tried dir: ${LLVM_DIR}")
 endif()
 
@@ -26,13 +26,19 @@ find_package(LLVM REQUIRED CONFIG
               NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH NO_CMAKE_SYSTEM_PATH)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in ${LLVM_DIR}")
+message(STATUS "LLVM dylib: ${LLVM_LINK_LLVM_DYLIB}")
+message(STATUS "LLVM RTTI: ${LLVM_ENABLE_RTTI}")
 
-if (${LLVM_VERSION_MAJOR} LESS 6)
-  message(FATAL_ERROR "atJIT is not known to support LLVM < 6")
+if (${LLVM_VERSION_MAJOR} LESS 8)
+  message(FATAL_ERROR "atJIT does not support LLVM < 8")
 endif()
 
-if (${LLVM_ENABLE_RTTI} EQUAL "ON")
+if (NOT LLVM_ENABLE_RTTI)
   message(FATAL_ERROR "atJIT currently requires LLVM with RTTI.")
+endif()
+
+if (NOT LLVM_LINK_LLVM_DYLIB)
+  message(FATAL_ERROR "atJIT requires libLLVM built in a certian way")
 endif()
 
 set(LIBLLVM_LINK_FLAGS "-Wl,-rpath,'${LLVM_LIBRARY_DIR}' -L${LLVM_LIBRARY_DIR} -lLLVM")
@@ -54,17 +60,11 @@ add_definitions(-DLLVM_VERSION_MAJOR=${LLVM_VERSION_MAJOR})
 include_directories(SYSTEM include)
 
 set(CLANGXX_BIN "${LLVM_TOOLS_BINARY_DIR}/clang++")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror=return-type -Wno-unused-parameter")
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror=return-type -Wno-unused-parameter")
-
-# enable logging with streams with loguru
-add_definitions(-DLOGURU_WITH_STREAMS=1)
-
-# NOTE: -O2 and -O3 cause the plugin to segfault _only_ on Travis CI with LLVM 6.
-# it happens when the bitcode register pass tries to construct a Twine, so
-# there's no straight-forward fix.
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O1")
 
 # needed for colors when using Ninja
 # source: https://medium.com/@alasher/colored-c-compiler-output-with-ninja-clang-gcc-10bfe7f2b949
@@ -80,20 +80,16 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
-set(EASY_JIT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+set(ATJIT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(cmake)
 add_subdirectory(include)
 add_subdirectory(pass)
 add_subdirectory(runtime)
 
-add_custom_target(easy-jit-core DEPENDS EasyJitPass EasyJitRuntime)
+add_custom_target(atjit-core DEPENDS EasyJitPass ATJitRuntime)
 
 add_subdirectory(doc)
 add_subdirectory(benchmark)
 
 include(CMakeTests.txt)
-
-configure_file("${EASY_JIT_ROOT}/misc/atjitc.in" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/atjitc")
-install(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/atjitc DESTINATION bin
-PERMISSIONS OWNER_EXECUTE OWNER_READ )
