--- a/doc/readme/CMakeLists.txt
+++ b/doc/readme/CMakeLists.txt
@@ -1,6 +1,6 @@
-option(EASY_JIT_EXAMPLE "Build Examples" OFF)
+option(ATJIT_EXAMPLE "Build Examples" OFF)
 
-if(EASY_JIT_EXAMPLE)
+if(ATJIT_EXAMPLE)
     find_package(OpenCV REQUIRED)
 
     include_directories(${LLVM_INCLUDE_DIRS})
@@ -10,7 +10,7 @@ if(EASY_JIT_EXAMPLE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -disable-O0-optnone -Xclang -load -Xclang ${EASY_JIT_PASS}")
 
     add_executable(easyjit-example camfilter.cpp)
-    add_dependencies(easyjit-example easy-jit-core)
+    add_dependencies(easyjit-example atjit-core)
 
     include_directories(${OpenCV_INCLUDE_DIRS})
     target_link_libraries(easyjit-example ${OpenCV_LIBS})
@@ -18,5 +18,5 @@ if(EASY_JIT_EXAMPLE)
     link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
     target_link_libraries (easyjit-example ${Benchmark_LIBRARIES})
-    target_link_libraries (easyjit-example EasyJitRuntime pthread)
+    target_link_libraries (easyjit-example ATJitRuntime pthread)
 endif()
