--- a/pass/CMakeLists.txt
+++ b/pass/CMakeLists.txt
@@ -1,6 +1,12 @@
+# NOTE: -O2 and -O3 cause the plugin to segfault _only_ on Travis CI with LLVM 6.
+# it happens when the bitcode register pass tries to construct a Twine, so
+# there's no straight-forward fix.
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O1")
+
 include(AddLLVM)
 
-add_llvm_loadable_module(EasyJitPass
+add_llvm_library(EasyJitPass
+  MODULE
   RegisterPasses.cpp
   Easy.cpp
   MayAliasTracer.cpp
