--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,7 +1,12 @@
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+
+# enable logging with streams with loguru
+add_definitions(-DLOGURU_WITH_STREAMS=1)
+
 include(XGBoost)
 include(GCD)
 
-add_library(EasyJitRuntime SHARED
+add_library(ATJitRuntime SHARED
   BitcodeTracker.cpp
   Context.cpp
   Function.cpp
@@ -26,7 +31,7 @@ add_library(EasyJitRuntime SHARED
 # the installed version of the library needs to
 # retain its rpath to the non-system-wide libs that we're linking in.
 # it will get stripped during install without this.
-set_target_properties(EasyJitRuntime PROPERTIES
+set_target_properties(ATJitRuntime PROPERTIES
                       INSTALL_RPATH "${XGB_LIB_DIR};${LLVM_LIBRARY_DIR}"
                       INSTALL_RPATH_USE_LINK_PATH TRUE)
 
@@ -42,7 +47,7 @@ if (${POLLY_KNOBS})
   add_definitions(${Polly_DEFINITIONS})
 
   # Polly's exported targets already includes libLLVM
-  target_link_libraries(EasyJitRuntime PUBLIC Polly)
+  target_link_libraries(ATJitRuntime PUBLIC Polly)
 
 else() #########
 
@@ -55,16 +60,20 @@ requireFound(LIBLLVM_LIB "Could not find libLLVM !")
 
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
-target_link_libraries(EasyJitRuntime PUBLIC ${LIBLLVM_LIB})
+target_link_libraries(ATJitRuntime PUBLIC ${LIBLLVM_LIB})
 
 endif()
 #########################
 
-target_link_libraries(EasyJitRuntime PUBLIC ${XGB_LIB})
-target_link_libraries(EasyJitRuntime PUBLIC ${GCD_LIB})
+target_link_libraries(ATJitRuntime PUBLIC ${XGB_LIB})
+target_link_libraries(ATJitRuntime PUBLIC ${GCD_LIB})
 
 
-set(EASY_JIT_RUNTIME ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libEasyJitRuntime${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
+set(ATJIT_RUNTIME ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libATJitRuntime${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
 
-install(TARGETS EasyJitRuntime
+install(TARGETS ATJitRuntime
         LIBRARY DESTINATION lib)
+
+configure_file("${ATJIT_ROOT}/misc/atjitc.in" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/atjitc")
+install(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/atjitc DESTINATION bin
+PERMISSIONS OWNER_EXECUTE OWNER_READ )
