--- a/tests/lit.cfg.in
+++ b/tests/lit.cfg.in
@@ -12,11 +12,11 @@ config.test_exec_root = "@CMAKE_CURRENT_BINARY_DIR@/tests"
 
 config.environment['PATH'] = os.pathsep.join(["@LLVM_TOOLS_BINARY_DIR@"] + [ config.environment['PATH'] ])
 
-runtime_lib = os.path.basename("@EASY_JIT_RUNTIME@").split('.')[0].replace("lib", "", 1)
-runtime_lib_dir = os.path.dirname("@EASY_JIT_RUNTIME@")
+runtime_lib = os.path.basename("@ATJIT_RUNTIME@").split('.')[0].replace("lib", "", 1)
+runtime_lib_dir = os.path.dirname("@ATJIT_RUNTIME@")
 llvm_lib_dir = os.path.join(os.path.dirname("@LLVM_TOOLS_BINARY_DIR@"), "lib")
 
-includes = ["@EASY_JIT_ROOT@"]
+includes = ["@ATJIT_ROOT@"]
 include_flags = " ".join(["-I'" + os.path.abspath(dir) + "'" for dir in "@LLVM_INCLUDE_DIRS@".split()] + ["-I'" + os.path.join(dir, "include") + "'" for dir in includes] )
 
 ld_paths = [runtime_lib_dir, llvm_lib_dir]
@@ -46,7 +46,7 @@ config.substitutions.append(('%cxxflags', common_flags + "--std=c++17"))
 config.substitutions.append(('%cflags', common_flags))
 config.substitutions.append(('%include_flags', include_flags))
 config.substitutions.append(('%lib_pass', "@EASY_JIT_PASS@"))
-config.substitutions.append(('%lib_runtime', "@EASY_JIT_RUNTIME@"))
+config.substitutions.append(('%lib_runtime', "@ATJIT_RUNTIME@"))
 config.substitutions.append(('%ld_flags', ld_flags))
 
 config.substitutions.append(('%not', "!"))
