--- a/misc/atjitc.in
+++ b/misc/atjitc.in
@@ -8,6 +8,6 @@ ${CLANGXX_BIN} -Xclang -disable-O0-optnone --std=c++${CMAKE_CXX_STANDARD} \
   -I${LLVM_INCLUDE_DIRS} \
   -I${CMAKE_INSTALL_PREFIX}/include \
   -Wl,-rpath,'${CMAKE_INSTALL_PREFIX}/lib' \
-  -L${CMAKE_INSTALL_PREFIX}/lib -lEasyJitRuntime \
+  -L${CMAKE_INSTALL_PREFIX}/lib -lATJitRuntime \
   ${LIBLLVM_LINK_FLAGS} \
   "$@"
